[package]
name = "subcoin-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "subcoin"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
bitcoin-explorer = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
frame = { workspace = true }
frame-benchmarking-cli = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
pallet-bitcoin = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-nakamoto = { workspace = true }
sc-executor = { workspace = true }
sc-informant = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }
serde_json = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
subcoin-informant = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-runtime = { workspace = true }
subcoin-service = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
runtime-benchmarks = [
    "sc-service/runtime-benchmarks",
]
