[package]
name = "subcoin-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "subcoin"
path = "src/bin/subcoin.rs"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
bitcoin-explorer = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
frame-benchmarking-cli = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true }
indicatif = "0.17.9"
jsonrpsee = { workspace = true }
pallet-bitcoin = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-nakamoto = { workspace = true, features = ["cli"] }
sc-executor = { workspace = true }
sc-informant = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
subcoin-crypto = { workspace = true }
subcoin-informant = { workspace = true }
subcoin-network = { workspace = true, features = ["cli"] }
subcoin-primitives = { workspace = true }
subcoin-rpc = { workspace = true }
subcoin-runtime = { workspace = true }
subcoin-service = { workspace = true }
subcoin-utxo-snapshot = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
tracing = { workspace = true }
txoutset = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
subcoin-test-service = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
runtime-benchmarks = [
    "sc-service/runtime-benchmarks",
]
rocksdb = ["sc-cli/rocksdb"]
benchmark = ["frame-benchmarking-cli"]
