[package]
name = "subcoin-primitives"
description = "Primitives for Subcoin Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
codec = { workspace = true }
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
# We need to explicitly enable the default-features, otherwise `default-features = false`
# will be inherited from the workspace config, compiling this crate soly may fail.
subcoin-runtime-primitives = { workspace = true, default-features = true }
tracing = { workspace = true }
