[package]
name = "subcoin-runtime-primitives"
description = "Primitives for Subcoin runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true, optional = true }
bitcoin = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"bincode",
	"bitcoin/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
