[package]
name = "subcoin-runtime"
description = "Substrate runtime for Bitcoin"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true, default-features = false }
# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { workspace = true, default-features = false, features = ["experimental", "runtime"] }
pallet-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
pallet-bitcoin = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
subcoin-runtime-primitives = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame/std",
    "pallet-executive/std",
    "frame-support/std",
    "log/std",
    "pallet-bitcoin/std",
    "scale-info/std",
    "sp-api/std",
    "sp-genesis-builder/std",
    "sp-runtime/std",
    "substrate-wasm-builder",
    "subcoin-runtime-primitives/std",
]
