[package]
name = "subcoin-runtime"
description = "Substrate runtime for Bitcoin"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true, default-features = false }
pallet-executive = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
pallet-bitcoin = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
subcoin-runtime-primitives = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "pallet-executive/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-support/std",
    "log/std",
    "pallet-bitcoin/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
    "subcoin-runtime-primitives/std",
]
