[package]
name = "subcoin-script"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
bitflags = { workspace = true }
primitive-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
