[package]
name = "subcoin-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
pallet-bitcoin = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-nakamoto = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-rpc = { workspace = true }
# `test-helpers` for the exposed Client type.
sc-service = { workspace = true, features = ["test-helpers"], default-features = false }
sc-storage-monitor = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-utils = { workspace = true }
serde_json = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-storage = { workspace = true }
sp-trie = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-runtime = { workspace = true }
tracing = { workspace = true }
