[package]
name = "subcoin-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
pallet-bitcoin = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-nakamoto = { workspace = true }
sc-executor = { workspace = true }
sc-fast-sync-backend = { workspace = true }
sc-informant = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
# `test-helpers` for the exposed Client type.
sc-service = { workspace = true, features = ["test-helpers"], default-features = false }
sc-storage-monitor = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }
serde_json = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-storage = { workspace = true }
sp-trie = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-runtime = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sp-tracing = { workspace = true }
subcoin-test-service = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
