[package]
name = "subcoin-snapcake"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "snapcake"
path = "src/main.rs"

[dependencies]
bitcoin = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
pallet-bitcoin = { workspace = true }
sc-consensus = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus-nakamoto = { workspace = true }
sc-executor = { workspace = true }
sc-informant = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-service = { workspace = true }
sc-transaction-pool = { workspace = true }
serde = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-runtime = { workspace = true }
subcoin-crypto = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-runtime = { workspace = true }
subcoin-runtime-primitives = { workspace = true }
subcoin-service = { workspace = true }
subcoin-utils = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
csv = "1.3.0"
