[package]
name = "subcoin-utxo-snapshot"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
serde = { workspace = true }
subcoin-primitives = { workspace = true }
txoutset = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
hex = { workspace = true }
